JavaFX Ensemble8 media sample hang and crash

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • 9
    • Affects Version/s: 8u60, 9
    • Component/s: javafx
    • Environment:

      Mac OSX 10.11.5

        In Jigsaw mode the advanced media sample exhibits a hang (repeatable) and a crash (not repeatable yet).

        Mac OSX 10.11.5
        Xcode 7.3.1
        JAVA_HOME=/Library/Java/JavaVirtualMachines/jdk-9e109.jdk/Contents/Home
        JDK_HOME=/Library/Java/JavaVirtualMachines/jdk-9e109.jdk/Contents/Home
        JIGSAW_HOME=/Library/Java/JavaVirtualMachines/jdk-9.jdk/Contents/Home

        Ran with:

        $JIGSAW_HOME/bin/java @build/xpatch.args -cp /Users/morris/jfx/9-dev/rt/apps/samples/Ensemble8/lib/lucene-core-3.2.0.jar:/Users/morris/jfx/9-dev/rt/apps/samples/Ensemble8/lib/lucene-grouping-3.2.0.jar:/Users/morris/jfx/9-dev/rt/apps/samples/Ensemble8/build/classes ensemble.EnsembleApp

              Assignee:
              David Dehaven (Inactive)
              Reporter:
              Morris Meyer (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved: