8156563: JavaFX Ensemble8 media sample hang and crash

Reviewed-by: almatvee, kcr