modules/javafx.media/src/main/native/jfxmedia/platform/osx/avf/AVFAudioSpectrumUnit.cpp
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2014, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2014, 2016, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -43,6 +43,7 @@ AVFAudioSpectrumUnit::AVFAudioSpectrumUnit() :
     mSpectrumCallbackContext(NULL),
 
     mEnabled(true),
+
     mBandCount(128),
     mBands(NULL),
     mUpdateInterval(kDefaultAudioSpectrumUpdateInterval),
@@ -64,6 +65,8 @@ AVFAudioSpectrumUnit::AVFAudioSpectrumUnit() :
 {
     mMixBuffer.mNumberBuffers = 1;
     mMixBuffer.mBuffers[0].mData = NULL;
+
+    pthread_mutex_init(&mBandLock, NULL);
 }
 
 AVFAudioSpectrumUnit::~AVFAudioSpectrumUnit() {
@@ -85,6 +88,9 @@ OSStatus AVFAudioSpectrumUnit::ProcessBufferLists(AudioUnitRenderActionFlags& io
                                                   AudioBufferList& outBuffer,
                                                   UInt32 inFramesToProcess)
 {
+    if (!mEnabled) {
+        return noErr;
+    }
     // (Re)allocate mix buffer if needed
     if (!mMixBuffer.mBuffers[0].mData || mMixBufferFrameCapacity < inFramesToProcess) {
         // allocate buffer list (only need to do this once)
@@ -139,9 +145,20 @@ void AVFAudioSpectrumUnit::SetEnabled(bool isEnabled) {
 }
 
 void AVFAudioSpectrumUnit::SetBands(int bands, CBandsHolder* holder) {
-    mBandCount = bands;
-    mBands = holder;
+    lockBands();
+    if (mBands) {
+        CBandsHolder::ReleaseRef(mBands);
+        mBands = NULL;
+    }
+    mBandCount = 0;
+    if (holder) {
+        mBands = CBandsHolder::AddRef(holder);
+        if (mBands) {
+            mBandCount = bands;
+        }
+    }
     mRebuildCrunch = true;
+    unlockBands();
 }
 
 size_t AVFAudioSpectrumUnit::GetBands() {
@@ -178,7 +195,7 @@ void AVFAudioSpectrumUnit::Reset() {
 
 static void AVFAudioSpectrum_SpectralFunction(SpectralBufferList* inSpectra, void* inUserData) {
     AVFAudioSpectrumUnit *unit = static_cast<AVFAudioSpectrumUnit*>(inUserData);
-    if (unit) {
+    if (unit && unit->IsEnabled()) {
         unit->SpectralFunction(inSpectra);
     }
 }
@@ -186,6 +203,14 @@ static void AVFAudioSpectrum_SpectralFunction(SpectralBufferList* inSpectra, voi
 void AVFAudioSpectrumUnit::SpectralFunction(SpectralBufferList* inSpectra) {
     // https://developer.apple.com/library/mac/documentation/Performance/Conceptual/vDSP_Programming_Guide/UsingFourierTransforms/UsingFourierTransforms.html
     // Scale the results properly, scale factor is 2x for 1D real forward transforms
+
+    // lock now otherwise the bands could change while we're processing
+    lockBands();
+    if (!mBands || mBandCount <= 0 || !mEnabled) {
+        unlockBands();
+        return;
+    }
+
     float scale = 2.0;
     DSPSplitComplex *cplx = inSpectra->mDSPSplitComplex;
     vDSP_vsmul(cplx->realp, 1, &scale, cplx->realp, 1, mBandCount);
@@ -221,9 +246,7 @@ void AVFAudioSpectrumUnit::SpectralFunction(SpectralBufferList* inSpectra) {
         vDSP_vsdiv(mPhases, 1, &divisor, mPhases, 1, mBandCount);
 
         // Update band data
-        if (mBands) {
-            mBands->UpdateBands(mBandCount, mMagnitudes, mPhases);
-        }
+        mBands->UpdateBands(mBandCount, mMagnitudes, mPhases);
 
         // Call our listener to dispatch the spectrum event
         if (mSpectrumCallbackProc) {
@@ -236,9 +259,12 @@ void AVFAudioSpectrumUnit::SpectralFunction(SpectralBufferList* inSpectra) {
         vDSP_vclr(mPhases, 1, mBandCount);
         mFFTCount = 0;
     }
+    unlockBands();
 }
 
 void AVFAudioSpectrumUnit::SetupSpectralProcessor() {
+    lockBands();
+
     if (mSpectralCrunch) {
         delete mSpectralCrunch;
         mSpectralCrunch = NULL;
@@ -248,7 +274,7 @@ void AVFAudioSpectrumUnit::SetupSpectralProcessor() {
         mPhases.free();
     }
 
-    if (mEnabled && mBandCount > 0) {
+    if (mEnabled && mBandCount > 0 && (mBands != NULL)) {
         // inFFTSize = 2x number of bins (this is adjusted properly later)
         // inHopSize = the number of samples to increment per update, depends on
         //             how much oversampling we want
@@ -288,4 +314,5 @@ void AVFAudioSpectrumUnit::SetupSpectralProcessor() {
     } // else leave disabled
 
     mRebuildCrunch = false;
+    unlockBands();
 }
